--- a/prioneer1-3/src/index.css
+++ b/prioneer1-3/src/index.css
@@ -46,4 +46,5 @@ ul {
   padding-left: 20px;
 }
 
-.avatar { border-radius: 50%; height: 90px; }
+body { min-height: 120px; }
+.avatar { margin: 20px; border-radius: 50%; }
