--- a/prioneer1-3/src/index.css
+++ b/prioneer1-3/src/index.css
@@ -46,5 +46,4 @@ ul {
   padding-left: 20px;
 }
 
-body { min-height: 120px; }
-.avatar { margin: 20px; border-radius: 50%; }
+li { margin-bottom: 10px; }
