4-4. 상태를 스냅샷으로 사용하기

--- a/pironeer1-4/src/index.css
+++ b/pironeer1-4/src/index.css
@@ -46,8 +46,4 @@ ul {
   padding-left: 20px;
 }
 
-.Toolbar {
-  background: #aaa;
-  padding: 5px;
-}
-button { margin: 5px; }
+label, textarea { margin-bottom: 10px; display: block; }
