--- a/pironeer1-4/src/index.css
+++ b/pironeer1-4/src/index.css
@@ -46,4 +46,5 @@ ul {
   padding-left: 20px;
 }
 
-label, textarea { margin-bottom: 10px; display: block; }
+label { display: block; }
+input { margin-left: 5px; margin-bottom: 5px; }
