--- a/github/src/App.css
+++ b/github/src/App.css
@@ -1,38 +1,88 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dashboard-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #fff;
+  padding: 20px;
+  border-right: 1px solid #e1e4e8;
+}
+
+.main-content {
+  flex-grow: 1;
+  padding: 20px;
+  margin-left: 10px;
+}
+
+.right-panel {
+  width: 320px;
+  padding: 20px;
+  margin-left: 20px;
+}
+.profile {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e1e4e8;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.profile img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile h3 {
+  font-size: 16px;
+  color: #24292e;
+  font-weight: bold;
+}
+body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f6f8fa;
+    margin: 0;
+}
+
+h2, h4 {
+    font-weight: bold;
+    color: #24292e;
+}
+
+p, li {
+    color: #586069;
+}
+.header {
+  display: flex;
+  align-items: center;
+  background-color: #24292e;
+  padding: 10px 20px;
+  color: #fff;
+}
+
+.header h1 {
+  font-size: 18px;
+  color: #fff;
+}
+
+.header .menu {
+  margin-left: auto;
+  display: flex;
+}
+
+.header .menu-item {
+  margin-left: 15px;
+  font-size: 14px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.header .menu-item:hover {
+  text-decoration: underline;
 }
